<resources>
    <string name="app_name">Task2Trip</string>
    <string name="menu_task">Задания</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_add">Новое</string>
    <string name="menu_chat">Входящие</string>
    <string name="menu_profile">Профиль</string>
    <string name="register">Зарегистрироваться</string>
    <string name="login">Войти</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_password">Пароль</string>
    <string name="reg_name">Ваше имя</string>
    <string name="reg_forgot">Забыли пароль</string>
    <string name="reg_login_social">Войти через социальные сети</string>
    <string name="board_skip_text">
        <u>Пропустить</u>
    </string>
    <string name="board_title_01">Местные жители выполнят ваши задачи в путешествиях по всему миру!</string>
    <string name="board_title_02">Создайте любое задание!</string>
    <string name="board_msg_01">Создать маршрут путешествия,\nнайти гида или трансфер</string>
    <string name="board_msg_02">
        &#160;1. Опишите задачу, которую нужно выполнить\n
        2. Местные жители предложат вам свои услуги и цены\n
        3. Выберите лучшее предложение и заключите сделку
    </string>
    <string name="profile_name_title">Имя</string>
    <string name="profile_birthday_title">Дата рождения</string>
    <string name="profile_gender_title">Пол</string>
    <string name="profile_country_title">Страна</string>
    <string name="profile_city_title">Город</string>
    <string name="profile_photo">Моя фотография</string>
    <string name="profile_task_execute">Выполнять задания</string>
    <string name="profile_task_execute_description">Откликайтесь на задания путешественников и получайте вознаграждение
        за свою работу!
    </string>
    <string name="profile_task_created">Заданий\nсоздано</string>
    <string name="profile_task_executed">Заданий\nвыполнено</string>
    <string name="profile_main">Основное</string>
    <string name="profile_contacts">Контакты</string>
    <string name="profile_about">Обо мне</string>
    <string name="profile_social">Аккаунты в соц.сетях</string>
    <string name="profile_category">Категории</string>
    <string name="profile_male">Мужской</string>
    <string name="profile_female">Женский</string>
    <string name="profile_my_activity">Сфера деятельности</string>
    <string name="profile_tell_myself">Расскажите о себе</string>
    <string name="profile_interest">Интересы</string>
    <string name="profile_why_you_there">Почему вы на task2trip</string>

    <string name="search_filter_category_title">Категории</string>
    <string name="search_filter_region_title">Регион поиска</string>
    <string name="search_filter_status_title">Статус заданий</string>
    <string name="search_location">Регион поиска</string>
    <string name="search_location_default">Весь мир</string>

    <string name="task_create">Создать задание</string>
    <string name="task_get_my">Мои задания</string>
    <string name="task_get_my_offers">Мои предложения</string>
    <string name="task_add_my">Опубликовать</string>
    <string name="task_add_offer">Предложить свои услуги</string>
    <string name="task_edit">Редактировать</string>
    <string name="task_finish">Завершить</string>
    <string name="task_finished">Завершена</string>
    <string name="logo1">Создавайте любые задания</string>
    <string name="logo2">и находите местных жителей\nдля их выполнения</string>
    <string name="board_no_task">Создавайте\nлюбые задания</string>
    <string name="board_no_task_subtitle">и находите местных жителей\nдля его выполнения!</string>
    <string name="board_category_routes">Маршруты путешествий</string>
    <string name="board_category_routes_details">Заказать составление маршрута путешествия у местных жителей:\n
        – маршрут по не туристическим местам\n
        – маршрут-квест\n
        – маршрут для путешествий с детьми
    </string>
    <string name="board_category_guides">Гиды и проводники</string>
    <string name="board_category_guides_details">Найти гида или проводника\n
        – посещение не туристических мест\n
        – знакомство с местными традициями и бытом\n
        – в гости к местным жителям
    </string>
    <string name="board_category_travel_mates">Помощники в путешествиях</string>
    <string name="board_category_travel_mates_details">Найти мастера по ремонту, фотографа, переводчика, врача и многих
        других
    </string>
    <string name="board_category_travel_transfer">Трансфер</string>
    <string name="board_category_travel_transfer_details">Заказать трансфер в аэропорт, по городу или стране вашего
        путешествия
    </string>

    <string name="next_step">Далее</string>
    <string name="next_finish">Готово</string>
    <string name="save">Сохранить</string>
    <string name="task_show">Показать</string>

    <string name="setting_about">О приложении</string>
    <string name="setting_exit_app">Выйти из профиля</string>
    <string name="setting_black_list">Черный список</string>
    <string name="setting_change_password">Изменить пароль</string>
    <string name="setting_notifications">Уведомления</string>
    <string name="setting_ask_question">Задать вопрос</string>
    <string name="title_login_into_app">Вход в приложение</string>
    <string name="title_registration">Регистрация</string>
    <string name="title_create_task">Добавить задание</string>
    <string name="title_search_task">Поиск заданий</string>
    <string name="title_find_task">Найти задание</string>
    <string name="title_inbox">Входящие</string>
    <string name="title_chat_user">Диалог с пользователем</string>
    <string name="title_result_task_list">Результат: список заданий</string>
    <string name="title_task_params">Параметры задания</string>
    <string name="title_profile">Профиль</string>
    <string name="title_profile_params">Профиль. Параметры</string>
    <string name="title_settings">Настройки</string>
    <string name="title_black_list">Черный список</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_my_tasks">Мои задания</string>
    <string name="title_add_offer">Добавить предложение</string>
    <string name="title_offer_details_pager">Задание №YYY</string>
    <string name="title_offers">Предложения</string>
    <string name="title_offer_details">Просмотр предложения</string>
    <string name="title_task_details">Задача №ххх</string>
    <string name="title_login_registration">Вход / Регистрация</string>
    <string name="title_view_profile">Просмотр профиля</string>
    <string name="title_messages">Сообщения</string>
    <string name="title_details">Детали</string>
    <string name="title_travel">Путешественник</string>
    <string name="title_local">Местный житель</string>
    <string name="title_you_select">Вас выбрали</string>
    <string name="title_pending">На рассмотрении</string>
    <string name="title_name">Название</string>
    <string name="title_description">Описание</string>
    <string name="title_select_location">Введите страну и город</string>
    <string name="title_date_time_start_finish">Дата и время</string>
    <string name="title_price">Цена</string>

    <string name="error_no_location">Местоположение не определено</string>

    <string name="payment_type_cash">Оплата наличными</string>
    <string name="choose_begin_task_date">Укажите НАЧАЛО задания</string>
    <string name="choose_end_task_date">Укажите ОКОНЧАНИЕ задания</string>
    <string name="empty_task_list">У вас еще не было задач!</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>
</resources>
