<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/image_login_background"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
            android:id="@+id/tvTitleBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_64dp"
            android:fontFamily="FuturaBookC"
            android:textSize="@dimen/text_size_text_24sp"
            android:textColor="@color/white"
            android:text="@string/logo1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvTitleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="@dimen/margin_top_8dp"
            android:fontFamily="FuturaBookC"
            android:textColor="@color/gray_very_light"
            android:text="@string/logo2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTitleBig"/>

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/vpOnBoardPages"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    <com.task2trip.android.UI.Widget.RadioSwipeView
            android:id="@+id/rgDotted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/btReg"/>

    <Button
            android:id="@+id/btReg"
            android:text="@string/register"
            style="@style/buttonSolid"
            app:layout_constraintBottom_toTopOf="@+id/btLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

    <Button
            android:id="@+id/btLogin"
            android:text="@string/login"
            style="@style/buttonBorder"
            app:layout_constraintBottom_toTopOf="@+id/tvSkip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"/>

    <TextView
            android:id="@+id/tvSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_bottom_16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/board_skip_text"/>

</androidx.constraintlayout.widget.ConstraintLayout>