<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/group_step_color"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <View
                android:id="@+id/view_step_01"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:background="@color/purple"/>

        <View
                android:id="@+id/view_step_02"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:background="@color/gray_light"/>
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCountry"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_step"
            android:hint="@string/profile_country_title"
            style="@style/textLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/group_step_color">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/etCountry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/profile_city_title"
            style="@style/textLayout"
            android:layout_marginTop="@dimen/top_step"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCountry">

        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
            android:id="@+id/tvTitleSocial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="@dimen/margin_left_16dp"
            android:layout_marginLeft="@dimen/margin_left_16dp"
            android:textSize="24sp"
            android:textColor="@color/black"
            android:text="@string/profile_social"
            app:layout_constraintTop_toBottomOf="@+id/tvCity"/>

    <Button
            android:id="@+id/btNext"
            android:text="@string/next_finish"
            style="@style/buttonSolid"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>