<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tvCategory"
            android:hint="@string/search_filter_category_title"
            android:layout_marginTop="@dimen/top_step"
            style="@style/textLayoutSearch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCategory"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="16dp"
                android:background="@android:color/transparent"
                android:inputType="none"
                android:cursorVisible="false"
                android:focusable="false"
                android:clickable="false"
                android:focusableInTouchMode="false"
                tools:text="Гиды, Трансфер"
                android:text=""/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.task2trip.android.UI.Widget.SearchLocationField
            android:id="@+id/searchLocationView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_all_16dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCategory"/>

    <TextView
            android:id="@+id/etStatusHint"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_all_16dp"
            android:text="@string/search_filter_status_title"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchLocationView"/>

    <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/etStatus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_left_16dp"
            android:layout_marginLeft="@dimen/margin_left_16dp"
            android:layout_marginRight="@dimen/margin_right_16dp"
            android:layout_marginEnd="@dimen/margin_right_16dp"
            android:spinnerMode="dropdown"
            android:dropDownVerticalOffset="40dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etStatusHint"/>

    <View
            android:id="@+id/view_delimiter_02"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/gray_light"
            android:layout_marginTop="8dp"
            android:layout_marginStart="@dimen/margin_left_16dp"
            android:layout_marginLeft="@dimen/margin_left_16dp"
            android:layout_marginRight="@dimen/margin_right_16dp"
            android:layout_marginEnd="@dimen/margin_right_16dp"
            app:layout_constraintTop_toBottomOf="@+id/etStatus"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <Button
            android:id="@+id/btSearch"
            android:text="@string/task_show"
            style="@style/buttonSolid"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>